# GDSCGmailAPIWorkshop

./: .gitignore  README.md  pyproject.toml  requirements.txt
gmailsample/: boiler.py  list_emails.py  list_labels.py
